...
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Poet Assistant</string>

    <string name="tab_pattern">Pattern</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_wotd">Words of the day</string>
    <string name="tab_rhymer">Rhymer</string>
    <string name="tab_thesaurus">Thesaurus</string>
    <string name="tab_dictionary">Dictionary</string>
    <string name="tab_reader">Composer</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_clear">Clear</string>
    <string name="action_search">Search</string>
    <string name="action_random_word">Random word</string>
    <string name="action_clear_search_history">Clear search history</string>
    <string name="confirm_clear_search_history">Clear the search history?</string>
    <string name="action_wotd_history">Words of the day</string>
    <string name="action_clear_favorites">Clear all favorite words?</string>
    <string name="content_description_toggle_favorite">Toggle favorite</string>
    <string name="search_history_cleared">Search history cleared</string>
...
    <string name="action_import_favorites">Import favorites</string>
    <string name="import_favorites_success">Favorites imported from %s</string>
    <string name="import_favorites_error">Could not import favorites file from %s</string>
    <string name="export_favorites_success">Favorites exported to %s</string>
    <string name="export_favorites_error">Could not export favorites file to %s</string>
    <string name="export_favorites_default_filename">poet-assistant-favorites.txt</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="search_hint">Lookup a word</string>
    <string name="favorites_list_header">Favorites</string>
    <string name="wotd_list_header">Words of the day</string>
    <string name="rhyme_section_stress_syllables">Strict rhyme matches:</string>
    <string name="rhyme_section_favorites">Favorites:</string>
...
    <string name="menu_lookup_thesaurus">Thesaurus</string>
    <string name="menu_lookup_dictionary">Dictionary</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_more">More</string>
    <string name="snackbar_copied_text">Copied text to clipboard</string>
    <string name="title_activity_settings">Settings</string>
    <string name="wotd_setting_title">Word of the day</string>
    <string name="wotd_setting_description">Display a notification once a day with a random word.</string>
    <string name="wotd_notification_title">Word of the day: %s</string>
    <string name="wotd_notification_definition"><![CDATA[<br>\n<b>%1$s.</b> %2$s]]></string>
    <string name="wotd_setting_system_notification_priority_label_max">Max</string>
    <string name="wotd_setting_system_notification_priority_label_high">High</string>
    <string name="wotd_setting_system_notification_priority_label_default">Default</string>
    <string name="wotd_setting_system_notification_priority_label_low">Low</string>
    <string name="wotd_setting_system_notification_priority_label_min">Min</string>
    <string-array name="wotd_setting_system_notification_priority_labels">
        <item>@string/wotd_setting_system_notification_priority_label_max</item>
        <item>@string/wotd_setting_system_notification_priority_label_high</item>
        <item>@string/wotd_setting_system_notification_priority_label_default</item>
        <item>@string/wotd_setting_system_notification_priority_label_low</item>
        <item>@string/wotd_setting_system_notification_priority_label_min</item>
...
        <item>max</item>
        <item>high</item>
        <item>default</item>
        <item>low</item>
        <item>min</item>
    </string-array>
    <string name="wotd_setting_system_notification_priority_title">Notification priority</string>
    <string name="wotd_setting_system_notification_priority_summary">%s</string>
    <string name="all_rhymes_setting_title">Rhymes without definitions</string>
    <string name="all_rhymes_setting_description">Display all rhymes, even if words have no definitions (search may be slower)</string>
    <string name="match_ao_aa_setting_title">AO /ɔ/ matches AA /ɑ/</string>
    <string name="match_ao_aa_setting_description">AO /ɔ/: "off".\nAA /ɑ/: "father".</string>
    <string name="match_aor_ao_setting_title">AOR /ɔr/ matches AO /ɔ/</string>
    <string name="match_aor_ao_setting_description">AOR /ɔr/: "more".\nAO /ɔ/: "thaw".</string>
    <string name="thesaurus_reverse_lookup_setting_title">Include reverse lookup</string>
    <string name="thesaurus_reverse_lookup_setting_description">May be slower and include less relevant results.</string>
    <string name="share">Share</string>
    <string name="share_poem_text">Share poem text</string>
    <string name="share_poem_audio">Share poem audio</string>
    <string name="share_poem_audio_snackbar">Saving poem to audio file</string>
    <string name="share_poem_audio_progress_notification_title">Saving poem</string>
    <string name="share_poem_audio_progress_notification_message">Saving poem to audio file…</string>
    <string name="share_poem_audio_ready_notification_title">Poem audio ready</string>
    <string name="share_poem_audio_ready_notification_message">Tap to share the poem audio</string>
    <string name="share_poem_audio_error_notification_title">Error saving poem audio</string>
...
        <item>@string/pref_layout_value_efficient</item>
    </string-array>
    <string-array name="pref_layout_values">
        <item>Clean</item>
        <item>Efficient</item>
    </string-array>
    <string name="pref_selection_lookup_title">Selection lookup</string>
    <string name="pref_selection_lookup_summary">Enable lookup in the rhymer, thesaurus, and dictionary, when a word is selected (including from other apps).</string>
    <string name="pref_voice_preview_title">Preview</string>
    <string name="pref_voice_preview_summary">Listen to a voice sample</string>
    <string name="pref_voice_preview_text">To be, or not to be, that is the question.</string>
    <string name="pref_system_tts_settings_title">System voice settings</string>
    <string name="pref_system_tts_settings_description">This will leave Poet Assistant and open the system text-to-speech settings on your device.</string>
    <string name="tts_error"><![CDATA[No voices found! &#128552;]]></string>
    <string name="tts_error_open_system_settings">Voice settings</string>
    <string name="tts_error_open_app_settings">Settings</string>
    <string name="reader_word_char_count">%1$s, %2$s</string>

    <plurals name="reader_word_count">
        <item quantity="one">%s word</item>
        <item quantity="other">%s words</item>
    </plurals>
    <plurals name="reader_char_count">
        <item quantity="one">%s characters</item>
        <item quantity="other">%s characters</item>
    </plurals>
    <string name="word_count_help_title">Word count</string>
    <string name="word_count_help_message"><![CDATA[The following characters do not break up words for the word count:<br/>
<br/>
<b>- \' ’ _</b><br/>
All other punctuation characters break words.<br/><br/>
Each newline is counted as a single character for the character count.]]></string>

...
